Fix a bug on the intro text box that creates white space for smaller screen devices.

--- a/public/landingQueries.css
+++ b/public/landingQueries.css
@@ -1,7 +1,6 @@
 /* Big tablet to 1200px (widths smaller than the 1140 px row */
 @media only screen and (max-width: 1200px) {
   .intro-text-box {
-    width: 100%;
     padding: 0 2%;
   }
 
